--- a/site/test06.html
+++ b/site/test06.html
@@ -8,6 +8,10 @@
 
     <link rel="stylesheet" href="css/fonts.css">
     <style>
+        a {
+            text-decoration: none;
+            color: #000;
+        }
         *{
             padding: 0; margin: 0 auto;
         }
@@ -25,6 +29,9 @@
         header .logo {
             float: left;
         }
+
+
+
         header .menu {
             float: right;
             margin-top: 40px;
@@ -33,7 +40,25 @@
             list-style: none;
             float: left;
             padding-left: 50px;
+            position:relative;
         }
+        .menu li ul {
+            display: none;
+            position: absolute ;
+            top: 30px ;
+            left: 50px ;
+            right: 0 ;
+            background-color:white;
+            border: 1px solid black ;
+            text-align: center;
+        }
+        .menu li:hover > ul {
+            display: block;
+        }
+
+
+
+
         header .logo img {
             margin-top: 10px;
             width: 100px;
@@ -68,19 +93,39 @@
         .content .box1 {
             margin-top: 20px;
             margin-right: 20px;
-            width: 470px;
+            width: 460px;
             height: 210px;
-            background: url(img/news1.jpg) no-repeat;
-            background-size: cover;
+            border : 1px solid #d2d2d2;
             float: left;
+        }
+        .content .box1 h3 {
+            margin-top: 30px;
+            margin-bottom: 20px;
+            margin-left: 30px;
+        }
+        .content .box1 h3 span {
+            float:right;
+            margin-right: 30px;
+        }
+        .content .box1 h3 span a{
+            font-size: 15px;
+            font-weight: 200;
+        }
+        .content .box1 .board {
+            margin-left: 30px;
+        }
+        .content .box1 .board a{
+            display: block;
+            margin-top: 6px;
         }
         .content .box2 {
             margin-top: 20px;
-            width: 470px;
+            width: 460px;
             height: 210px;
+            border : 1px solid #d2d2d2;
             background: url(img/on.jpg) no-repeat;
             background-size: cover;
-            float: left;
+            float: right;
         }
 
 
@@ -162,11 +207,51 @@
                 </div>
                 <div class="menu">
                     <ul>
-                        <li>즐길거리</li>
-                        <li>요금/우대혜택</li>
-                        <li>참여프로그램</li>
-                        <li>이용가이드</li>
-                        <li>소통서비스</li>
+                        <li><a href="#">즐길거리</a>
+                            <ul class="submenu">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">요금/우대혜택</a>
+                            <ul class="submenu">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">참여프로그램</a>
+                            <ul class="submenu">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">이용가이드</a>
+                            <ul class="submenu">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">소통서비스</a>
+                            <ul class="submenu">
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </header>
@@ -176,7 +261,19 @@
             </div>
             <!-- //banner -->
             <div class="content">
-                <div class="box1"></div>
+                <div class="box1">
+                    <h3>
+                        <a href="#">롯데월드 소식 |</a>
+                        <a href="#">뉴스 / 공지</a>
+                        <span><a href="#">더보기</a></span>
+                    </h3>
+                    <div class="board">
+                        <a href="#">그럴싸진관 미라클</a>
+                        <a href="#">드림스테이지 '힘내 소중한 너'</a>
+                        <a href="#">'힘내 소중한 너' 음원 발매</a>
+                        <a href="#">이용 요금 조정 안내</a>
+                    </div>
+                </div>
                 <div class="box2"></div>
             </div>
             <!-- //content -->
