--- a/index.html
+++ b/index.html
@@ -365,6 +365,48 @@
                     </section>
                     <!-- //box -->
 
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-effect/parallaxEffect/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">PARALLAX</span>
+                                    <span class="overlay-text-thumb-donut">패럴랙스</span>
+                                    <span class="overlay-text-thumb1-donut">패럴랙스</span>
+                                    <span class="overlay-text-thumb2-donut">PARALLAX</span>
+                                </div>
+                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>PARALLAX</h5>
+                                    <p>패럴랙스</p>
+                                    <span>PARALLAX</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                       <!-- box -->
+                       <section class="color-shape reference">
+                        <a href="refer-effect/mouseEffect/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">MOUSE EFFECT</span>
+                                    <span class="overlay-text-thumb-donut">마우스 이펙트</span>
+                                    <span class="overlay-text-thumb1-donut">마우스 이펙트</span>
+                                    <span class="overlay-text-thumb2-donut">MOUSE EFFECT</span>
+                                </div>
+                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>MOUSE EFFECT</h5>
+                                    <p>마우스 이펙트</p>
+                                    <span>MOUSE EFFECT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
 
 
                 </div>
